--- a/core/pom.xml
+++ b/core/pom.xml
@@ -91,7 +91,12 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
