--- a/core/src/main/resources/application-oracle.yml
+++ b/core/src/main/resources/application-oracle.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: <oracle_db_url>
-    username: <db_username>
-    password: <db_paswrd>
+    url: jdbc:oracle:thin:@//localhost:1522/FREEPDB1
+    username: DOCFLOW
+    password: Docflow#123
     driver-class-name: oracle.jdbc.OracleDriver
 
   jpa:
@@ -16,3 +16,15 @@ spring:
   docflow:
     rules:
       short-circuit: true
+
+logging:
+  level:
+    root: INFO
+    com.docflow: TRACE
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
+  
+    
+docflow:
+  upload:
+    base-path: C:/Users/Samson/projects/docflow/uploads    
